# sync-migrate

./: .gitignore  .zshrc  Cargo.toml  LICENSE  README.md  filetypes.xml  material_theme.xml  packages.txt  personal-zsh-theme.zsh-theme  php.xml
LEGACY_DEPRECATED/: backup-packages.sh
MANUAL_BACKUP/shell-settings/themes/: kayid.zsh-theme
colors/: _@user_Darcula.icls  _@user_Solarized Dark _Material_.icls  _@user_Xcode-Dark.icls
keymaps/: macOS copy.xml
scripts/: .zshrc  backup-packages.sh  bulk-install.sh  composer.txt  node.txt  reset-jetbrains.sh
scripts/shell-settings/themes/: shayan.zsh-theme
src/: main.rs  mod_backup.rs
