[package]
name = "DotPorter"
authors = ["Hamza <hamza.hasbi@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
fs = "0.0.5"
anyhow = "1.0"
directories = "5.0"
libc = "0.2"
fs_extra = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8.19"
