[package]
name = "dotporter"
authors = ["Hamza <hamza.hasbi@gmail.com>"]
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/hamzahasbi/dotporter"
keywords = ["dotfiles", "installer", "cli"]
categories = ["command-line-utilities"]
description = "A CLI tool to manage your dotfiles"
exclude = [
    "LEGACY_DEPRECATED/*",
    "MANUAL_BACKUP/*",
]
# Define the library crate
[lib]
name = "dotporter"  # Name of the library crate
path = "src/main.rs"  # Path to the library root

# Define the binary crate
[[bin]]
name = "install"
path = "src/bin/install.rs"

[dependencies]
chrono = "0.4.23"
fs = "0.0.5"
anyhow = "1.0"
directories = "6.0.0"
libc = "0.2"
fs_extra = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8.19"
